# job-scheduler

./: architecture.md  dilamme_postman_collection.json  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
backend/core/: allocator.py  api.py  benchmark.py  consumer.py  handler.py  heap.py  models.py  schema.py  start_timing_wheel.py  timing_wheel.py  town_crier.py  urls.py  worker.py  worker_pool.py
backend/core/management/commands/: run_workers.py  seed_data.py
backend/core/migrations/: 0001_initial.py
backend/scheduler/: asgi.py  settings.py  urls.py
frontend/: Dockerfile  Dockerfile.prod  next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/dlq/: page.tsx
frontend/app/jobs/: page.tsx
frontend/components/dashboard/: StatCard.tsx
frontend/components/jobs/: JobsTable.tsx  PriorityDot.tsx  StatusBadge.tsx
frontend/components/layout/: Sidebar.tsx
frontend/hooks/: useJobUpdates.ts
frontend/lib/: api.ts  axios.ts  types.ts
nginx/: nginx.conf  nginx.ssl.conf
