[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.2",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.6.2",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
]
